# seamless-plugin-suite

./: .gitmodules  CMakeLists.txt  README.md  TODO.md
.github/workflows/: build_test_artifacts.yml
SeamLess_Client/: CMakeLists.txt
SeamLess_Client/source/: PluginEditor.cpp  PluginEditor.h  PluginParameters.cpp  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h
SeamLess_Client/source/ui/button/costumButton/: CustomButton.cpp  CustomButton.h
SeamLess_Client/source/ui/button/costumChoiceButton/: CustomChoiceButton.cpp  CustomChoiceButton.h
SeamLess_Client/source/ui/button/costumToogleButton/: CustomToggleButton.cpp  CustomToggleButton.h
SeamLess_Client/source/ui/sendFader/: SendFader.cpp  SendFader.h
SeamLess_Client/source/ui/sendFader/customSliderComponent/: CostumSliderComponent.h  CustomSliderComponent.cpp
SeamLess_Client/source/ui/slider/customRotarySlider/: CostumRotarySlider.cpp  CostumRotarySlider.h
SeamLess_Client/source/ui/slider/gainSliderBox/: GainSliderBox.cpp  GainSliderBox.h
SeamLess_Client/source/ui/slider/sphericalSliderBox/: SphericalSliderBox.cpp  SphericalSliderBox.h
SeamLess_Client/source/ui/slider/zPositionSlider/: ZPositionSlider.cpp  ZPositionSlider.h
SeamLess_Client/source/ui/sourceIndexSelector/: SourceIndexSelector.cpp  SourceIndexSelector.h
SeamLess_Client/source/ui/xyPad/: XYPad.cpp  XYPad.h
SeamLess_Client/source/ui/xyPad/coordinatesLabel/: CoordinatesLabel.cpp  CoordinatesLabel.h
SeamLess_Client/source/ui/xyPad/grid/: Grid.cpp  Grid.h
SeamLess_Client/source/ui/xyPad/soundSource/: SoundSource.cpp  SoundSource.h
SeamLess_Main/: CMakeLists.txt
SeamLess_Main/source/: PluginEditor.cpp  PluginEditor.h  PluginParameters.cpp  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h
SeamLess_Main/source/osc/: OscSender.cpp  OscSender.h
SeamLess_Main/source/osc/oscReceiver/: OSCReceiver.cpp  OSCReceiver.h
SeamLess_Main/source/osc/oscSender/: OSCSender.cpp  OSCSender.h
SeamLess_Main/source/sourceTree/: SourceTree.cpp  SourceTree.h
SeamLess_Main/source/ui/clientConnectionStatudLabel/: ClientConnectionStatusLabel.cpp  ClientConnectionStatusLabel.h
SeamLess_Main/source/ui/oscConnectionBox/: OSCConnectionBox.cpp  OSCConnectionBox.h
SeamLess_Main/source/ui/oscConnectionBox/oscReceivePortSelector/: OSCReceivePortSelector.cpp  OSCReceivePortSelector.h
SeamLess_Main/source/ui/oscConnectionBox/oscReceiveStatusLabel/: OSCReceiveStatusLabel.cpp  OSCReceiveStatusLabel.h
SeamLess_Main/source/ui/oscConnectionBox/oscSendAdressSelector/: OSCSendAdressSelector.cpp  OSCSendAdressSelector.h
SeamLess_Main/source/ui/oscConnectionBox/oscSendIntervalSelector/: OSCSendIntervalSelector.cpp  OSCSendIntervalSelector.h
SeamLess_Main/source/ui/oscConnectionBox/oscSendStatusLabel/: OSCSendStatusLabel.cpp  OSCSendStatusLabel.h
SeamLess_Main/source/ui/oscSendIntervalSelector/: OSCSendIntervalSelector.cpp  OSCSendIntervalSelector.h
assets/: CMakeLists.txt
cmake/: sanitizers.cmake
common/: CMakeLists.txt  SeamLess.h
common/osc/: OscSender.cpp  OscSender.h
common/pluginConnection/: MainServer.cpp  MainServer.h  OSCParameters.cpp  OSCParameters.h  PluginConnection.cpp  PluginConnection.h  SendParameters.cpp  SendParameters.h
common/ui/lookAndFeel/: FontLookAndFeel.h  LabelLookAndFeel.cpp  LabelLookAndFeel.h  SliderLookAndFeel.cpp  SliderLookAndFeel.h
common/utils/: RealtimeSanitizer.h
test/SeamLess_Main/: test_Main.cpp
test/client/: benchmark_Client.cpp
test/main/: benchmark_Main.cpp
